# arrays_in_c

./: CMakeLists.txt  exercise_aula_invertida.c  exersice_1.c  exersice_2.c  exersice_3.c  exersice_4.c  exersice_5.c  exersice_6.c
bidimensionales/: exercise_1.c  exercise_2.c  exercise_3.c  exercise_4.c  exercise_5.c  exercise_6.c  exercise_7.c  exercise_8.c  exercise_AI.c
cadenas/: exercise_1.c  exercise_3.c  exercise_4.c  exercise_4_mf.c  exersice_2.c
opencalc/: CMakeLists.txt  example.c  opencalc.c  opencalc.h
