cmake_minimum_required(VERSION 3.23)
project(arrays_in_c C)

set(CMAKE_C_STANDARD 11)

add_executable(eje1 exersice_1.c)
add_executable(eje2 exersice_2.c)
add_executable(eje3 exersice_3.c)
add_executable(eje4 exersice_4.c)
add_executable(eje5 exersice_5.c)
add_executable(eje6 exersice_6.c)
add_executable(ejeb1 bidimensionales/exercise_1.c)
add_executable(ejeb2 bidimensionales/exercise_2.c)
