cmake_minimum_required(VERSION 3.23)
project(arrays_in_c C)

set(CMAKE_C_STANDARD 11)

add_executable(eje1 exersice_1.c)
add_executable(eje2 exersice_2.c)
add_executable(eje3 exersice_3.c)
add_executable(eje4 exersice_4.c)
add_executable(eje5 exersice_5.c)
add_executable(eje6 exersice_6.c)
add_executable(ejeb1 bidimensionales/exercise_1.c)
add_executable(ejeb2 bidimensionales/exercise_2.c)
add_executable(ejeb3 bidimensionales/exercise_3.c)
add_executable(ejeb4 bidimensionales/exercise_4.c)
add_executable(ejeb5 bidimensionales/exercise_5.c)
add_executable(ejeb6 bidimensionales/exercise_6.c)
add_executable(ejeb7 bidimensionales/exercise_7.c)
add_executable(ejeba bidimensionales/exercise_AI.c)
add_executable(ejeb8 bidimensionales/exercise_8.c)
add_executable(ejec1 cadenas/exercise_1.c)
add_executable(ejec2 cadenas/exersice_2.c)
add_executable(ejec3 cadenas/exercise_3.c)
add_executable(ejec4 cadenas/exercise_4.c)
add_executable(ejec4m cadenas/exercise_4_mf.c)
add_executable(eau exercise_aula_invertida.c)